--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                     <span class="done-{{todo.done}}">{{todo.text}}</span>
                 </li>
             </ul>
+            <form ng-submit="addTodo()">
+                <input type="text" ng-model="todoText" size="30" placeholder=" Adicionar uma nova tarefe aqui.">
+                <input type="submit" value="Adicionar.">
+            </form>
         </div>
     </body>
 </html>
